--- a/server/py_modbus_multiclient/config.yaml
+++ b/server/py_modbus_multiclient/config.yaml
@@ -9,12 +9,12 @@ slaves:
     description: "test slave 1"
     registries:
       -
-        length: 2
+        length: 1
         location: 10
         max: 1024
         min: 0
-        type: holding #holding, input, coil, input_discrete
-        value: random_generated #random_generated, fixed, read
+        type: holding
+        value: random_generated
       -
         length: 1
         location: 11
@@ -29,7 +29,112 @@ slaves:
       -
         length: 1
         location: 0
-        max: 50
+        max: 1
+        min: 1
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 1
+        max: 1
+        min: 1
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 2
+        max: 1
+        min: 1
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 3
+        max: 1
+        min: 1
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 4
+        max: 0
         min: 0
-        type: holding
-        value: random_generated
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 5
+        max: 0
+        min: 0
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 6
+        max: 1
+        min: 1
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 7
+        max: 1
+        min: 1
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 8
+        max: 1
+        min: 1
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 9
+        max: 1
+        min: 1
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 10
+        max: 0
+        min: 0
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 11
+        max: 0
+        min: 0
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 12
+        max: 0
+        min: 0
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 13
+        max: 1
+        min: 1
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 14
+        max: 0
+        min: 0
+        type: coil
+        value: fixed
+      -
+        length: 1
+        location: 15
+        max: 1
+        min: 1
+        type: coil
+        value: fixed
