--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ go:
   - 1.6
 language: go
 script: go test -v ./... && go vet ./... && ./server/testFmt.sh 
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
